# mootdx

./: .bumpversion.cfg  .coveragerc  .coveralls.yml  .drone.yml  .editorconfig  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  fabfile.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.dev  requirements.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
docs/: .gitignore  CHANGELOG.md  Makefile  chlog.md  conf.py  history.md  index.md  index.rst  installation.rst  make.bat  modules.rst  mootdx.contrib.rst  mootdx.financial.rst  mootdx.rst  quick.md  quickstart.md  requirements.txt  setup.md  todo.md  usage.rst
docs/api/: affair.md  extras.md  fields.md  quote1.md  quote2.md  reader.md
docs/api/.ipynb_checkpoints/: quote2-checkpoint.md
docs/cli/: affair.md  bestip.md  bundle.md  quotes.md  reader.md
docs/faq/: api.md  batch_download_data.md  fuquan_factor.md
docs/img/: todo.md
mootdx/: __init__.py  __main__.py  affair.py  affairs.py  block.py  cli.py  cmdline.py  config.py  consts.py  download.py  exceptions.py  financial.py  logger.py  logging.py  market.py  mootdx.py  parse.py  quotes.py  reader.py  server.py  trader.py  utils.py  verify.py  version.py
mootdx/cache/: __init__.py  compat.py  file.py  timed.py  timer.py
mootdx/contrib/: __init__.py  adjust.py  compat.py  customize.py  data_fq.py  datafq.py  experimental.py  fq.py  fuquan.py
mootdx/financial/: base.py  columns.py  fields.py  financial.py  history.py
mootdx/tools/: DownloadTDXCaiWu.py  __init__.py  customize.py  reversion.py  tdx2csv.py
mootdx/utils/: __init__.py  adjust.py  demjson.py  factor.py  gjj.py  holiday.js  holiday.py  pandas_cache.py  timer.py
notebooks/: history_A_stock_k_data.csv
notebooks/.ipynb_checkpoints/: history_A_stock_k_data-checkpoint.csv
sample/: basic_adjust.py  basic_affairs.py  basic_quotes.py  basic_reader.py  fetch_affairs_all.py  fq.py  fuquan.py  lru_cache.py  parse_affairs_all.py  verify_server.py
scripts/: fabfile.py
tests/: __init__.py  conftest.py  requirements.txt  test_adjust.py  test_adjust2.py  test_affairs.py  test_bestip.py  test_block.py  test_blocknew.py  test_cardbin.py  test_customize.py  test_factor.py  test_frequency.py  test_holiday.py  test_livebar.py  test_mock.py  test_parse.py  test_quotes.py  test_quotes_base.py  test_quotes_ext.py  test_quotes_std.py  test_quotes_std1.py  test_quotes_std_bj.py  test_reader.py  test_reader_base.py  test_reader_ext.py  test_reader_std.py  test_reconnect.py  test_server.py  test_tdx2csv.py  test_tick.py  test_useless.py  test_utils.py  test_xdxr.py
tests/cache/: test_file.py
tests/financial/: test_affairs.py
tests/fixtures/T0002/hq_cache/: code2name.ini  code2name_qq.ini  ggqqcode.txt  hkxgsg.cfg  hkzsinfo.cfg  importzs.cfg  infoharbor_spec.cfg  neeqcode.txt  othersg.cfg  sh.tcu  sh.tfz  shsz.tdf  specallzt.txt  sz.tcu  sz.tfz  szqqcode.txt  tdxadr.cfg  tdxbjmore.cfg  tdxbk.cfg  tdxdszs.cfg  tdxhy.cfg  tdxmgag.cfg  tdxpkmore.cfg  tdxsbzs.cfg  tdxstat.cfg  tdxzs.cfg  tdxzs3.cfg  tdxzsbase.cfg  tend_std.cfg  xgsg.cfg
tests/fixtures/export/: SH#601003.csv  SH#601003.txt  SH#601005.txt  SH#601006.txt  SH#601007.txt  SH#601008.txt  SH#601009.txt
tests/fixtures/vipdoc/ds/lday/: 4#CF7D0LLS.day
tests/fixtures/vipdoc/sh/lday/: sh127021.day  sh881478.day
tests/quotes/: test_quotes_base.py  test_quotes_ext.py  test_quotes_std.py  test_std.py
tests/reader/: test_ext.py  test_reader_base.py  test_reader_block.py  test_reader_blocknew.py  test_reader_ext.py  test_reader_parse.py  test_reader_std.py  test_std.py
tests/server/: test_bestip.py
tests/tools/: test_customize.py  test_reversion.py  test_tdx2csv.py
tests/utils/: test_holiday.py  test_timer.py  test_utils.py
tests/vipdoc/ds/lday/: 4#CF7D0LAO.day
tests/vipdoc/sh/fzline/: sh688001.lc5
tests/vipdoc/sh/minline/: sh688001.lc1
tests/vipdoc/sz/lday/: sz000001.day
