[tool.poetry]
name = "mootdx"
version = "0.10.3"
description = "通达信数据读取接口."
authors = ["bopo <ibopo@126.com>"]
readme = "README.rst"
license = "MIT license"
homepage = "https://www.mootdx.com"
repository = "https://github.com/mootdx/mootdx"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


[tool.poetry.scripts]
mootdx = "mootdx.__main__:entry"


[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.1"
pandas = "^1.5.2"
tenacity = "^8.1.0"
tdxpy = "^0.1.10"
tqdm = "^4.65.0"

py-mini-racer = { version = "^0.6.0", optional = true }
prettytable = { version = "^3.5.0", optional = true }
click = { version = "^8.1.3", optional = true }
typing-extensions = "^4.5.0"


[tool.poetry.extras]
fetch = ["py-mini-racer"]
cli = ["prettytable", "click"]
all = ["prettytable", "click", "py-mini-racer"]


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pip = "^23.1.2"
freezegun = "^1.2.2"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.ustc.edu.cn/pypi/web/simple"
default = true
secondary = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.commitizen]
version = "0.10.3"
tag_format = "v$version"
update_changelog_on_bump = true
annotated_tag = true
changelog_file = "HISTORY.md"
version_files = [
    "mootdx/__init__.py:__version__",
    "setup.cfg:current_version = ",
    "pyproject.toml:version",
    "Makefile:VERSION := ",
]
